gccida/c1/commit_one_edge_insertion
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1764:4: error: expected ';' after expression
rtx end; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1764:5: error: use of undeclared identifier 'end'
rtx end; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1780:1: error: use of undeclared identifier 'end'
end = dest->end; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1783:1: error: use of undeclared identifier 'end'
end = dest->end; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1784:17: error: use of undeclared identifier 'end'
if ( *( _WORD *)end != 33 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1792:7: error: use of undeclared identifier 'end'
rtx = end; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1793:1: error: use of undeclared identifier 'end'
end = ( rtx)end[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1795:20: error: use of undeclared identifier 'end'
while ( *( _WORD *)end == 37 && end[2].fld[0].rtint == -96 ); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1795:33: error: use of undeclared identifier 'end'
while ( *( _WORD *)end == 37 && end[2].fld[0].rtint == -96 ); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1797:1: error: use of undeclared identifier 'end'
end = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1808:1: error: use of undeclared identifier 'end'
end = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/cfgrtl.c:1819:41: error: use of undeclared identifier 'end'
nonnote_insn = emit_insns_after( insns, end); 
                                        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/commit_one_edge_insertion/src/obj/cfgrtl.o] Error 1
